<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/fieldsColor">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="303dp"
                android:layout_height="match_parent"
                android:background="#FEFEFE"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/ID"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/font2bold"
                    android:paddingLeft="20dp"
                    android:text="@string/id"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    tools:paddingLeft="20dp" />

                <TextView
                    android:id="@+id/cityID"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/font2bold"
                    android:paddingLeft="20dp"
                    android:text="@string/city"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    tools:paddingLeft="20dp" />

                <TextView
                    android:id="@+id/countryID"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/font2bold"
                    android:paddingLeft="20dp"
                    android:text="@string/country"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/accomodationID"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/font2bold"
                    android:paddingLeft="20dp"
                    android:text="@string/accommodation"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="97dp"
                android:layout_height="92dp"
                android:background="@color/white"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/editButton"
                    android:layout_width="39dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="15dp"
                    android:contentDescription="@string/editButton"
                    android:paddingTop="2dp"
                    android:paddingRight="2dp"
                    app:srcCompat="@drawable/edit_button" />

                <ImageView
                    android:id="@+id/deleteButton"
                    android:layout_width="39dp"
                    android:layout_height="35dp"
                    android:contentDescription="@string/deleteButton"
                    android:paddingRight="2dp"
                    android:paddingBottom="2dp"
                    app:srcCompat="@drawable/delete_button" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>