<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:launchMode="singleTask"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".service.EditCityBreakActivity">

        <ImageView
            android:id="@+id/backgroundImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/background_photo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="58dp">

            <EditText
                android:id="@+id/updateDescription"
                android:layout_width="370dp"
                android:layout_height="70dp"
                android:layout_marginStart="23dp"
                android:layout_marginTop="408dp"
                android:layout_marginEnd="18dp"
                android:autofillHints=""
                android:background="#99FFFFFF"
                android:ems="10"
                android:fontFamily="@font/font2bold"
                android:gravity="top"
                android:hint="@string/inputDescription"
                android:inputType="textMultiLine"
                android:textColor="@color/black"
                android:textColorHint="#000000"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/updateBudget"
                android:layout_width="370dp"
                android:layout_height="49dp"
                android:layout_marginStart="23dp"
                android:layout_marginTop="556dp"
                android:layout_marginEnd="18dp"
                android:autofillHints=""
                android:background="#99FFFFFF"
                android:ems="10"
                android:fontFamily="@font/font2bold"
                android:gravity="top"
                android:hint="@string/inputBudget"
                android:inputType="number"
                android:textColor="@color/black"
                android:textColorHint="#000000"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout"
                android:layout_width="413dp"
                android:layout_height="76dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/updateCityBreakCity"
                    android:layout_width="wrap_content"
                    android:layout_height="82dp"
                    android:layout_marginStart="26dp"
                    android:layout_marginEnd="26dp"
                    android:layout_marginBottom="15dp"
                    android:fontFamily="@font/font2bold"
                    android:paddingTop="50dp"
                    android:text="@string/editCityBreak"
                    android:textColor="@color/black"
                    android:textSize="26sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <EditText

                android:id="@+id/idInputUpdate"
                android:layout_width="371dp"
                android:layout_height="49dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="93dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="589dp"
                android:autofillHints=""
                android:background="#99FFFFFF"
                android:ems="10"
                android:fontFamily="@font/font2bold"
                android:hint="@string/createID"
                android:inputType="none"
                android:textColor="@color/black"
                android:textColorHint="#000000"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:textColor="@color/black" />

            <EditText
                android:id="@+id/updateCountry"
                android:layout_width="371dp"
                android:layout_height="49dp"
                android:layout_marginStart="22dp"
                android:layout_marginTop="212dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="470dp"
                android:autofillHints=""
                android:background="#99FFFFFF"
                android:ems="10"
                android:fontFamily="@font/font2bold"
                android:hint="@string/inputCountry"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textColorHint="#000000"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/updateStartDate"
                android:layout_width="372dp"
                android:layout_height="49dp"
                android:layout_marginStart="22dp"
                android:layout_marginEnd="17dp"
                android:layout_marginBottom="76dp"
                android:autofillHints=""
                android:background="#99FFFFFF"
                android:ems="10"
                android:fontFamily="@font/font2bold"
                android:hint="@string/inputEndDate"
                android:inputType="date"
                android:textColor="@color/black"
                android:textColorHint="#000000"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/updateDescription"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/updateCity"
                android:layout_width="371dp"
                android:layout_height="49dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="152dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="530dp"
                android:autofillHints=""
                android:background="#99ECE6E6"
                android:ems="10"
                android:fontFamily="@font/font2bold"
                android:hint="@string/inputCity"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textColorHint="#000000"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:textColor="@color/black" />

            <EditText
                android:id="@+id/updateEndDate"
                android:layout_width="370dp"
                android:layout_height="49dp"
                android:layout_marginStart="23dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="18dp"
                android:autofillHints=""
                android:background="#99FFFFFF"
                android:ems="10"
                android:fontFamily="@font/font2bold"
                android:gravity="top"
                android:hint="@string/inputStartDate"
                android:inputType="date"
                android:textColor="@color/black"
                android:textColorHint="#000000"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/updateCountry" />

            <EditText
                android:id="@+id/updateAccommodation"
                android:layout_width="370dp"
                android:layout_height="49dp"
                android:layout_marginStart="23dp"
                android:layout_marginTop="160dp"
                android:layout_marginEnd="18dp"
                android:autofillHints=""
                android:background="#99FFFFFF"
                android:ems="10"
                android:fontFamily="@font/font2bold"
                android:gravity="top"
                android:hint="@string/inputAccommodation"
                android:inputType="textMultiLine"
                android:textColor="@color/black"
                android:textColorHint="#000000"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/updateEndDate" />

            <Button
                android:id="@+id/cancelButtonUpdate"
                android:layout_width="116dp"
                android:layout_height="48dp"
                android:layout_marginStart="45dp"
                android:layout_marginTop="647dp"
                android:layout_marginEnd="250dp"
                android:layout_marginBottom="36dp"
                android:background="#99FFFFFF"
                android:fontFamily="@font/font2bold"
                android:text="@string/cancelOption"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />




            <Button
                        android:id="@+id/saveButtonUpdate"
                android:layout_width="116dp"
                android:layout_height="48dp"
                android:layout_marginStart="244dp"
                android:layout_marginTop="647dp"
                android:layout_marginEnd="51dp"
                android:layout_marginBottom="36dp"
                        android:background="#99FFFFFF"
                        android:fontFamily="@font/font2bold"
                        android:text="@string/saveOption"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

